[gd_scene load_steps=4 format=3 uid="uid://rg4pt1re2naq"]

[ext_resource type="Script" path="res://scenes/ui/battle_over_panel.gd" id="1_s4ljf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5h5y"]
bg_color = Color(0, 0, 0, 0.352941)

[sub_resource type="LabelSettings" id="LabelSettings_27nne"]
font_size = 24

[node name="BattleOverPanel" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -320.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_styles/panel = SubResource("StyleBoxFlat_x5h5y")
script = ExtResource("1_s4ljf")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 76.0
offset_top = 25.5
offset_right = 244.0
offset_bottom = 50.5
text = "Victorious !"
label_settings = SubResource("LabelSettings_27nne")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -30.0
offset_right = 41.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 22)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Awesome !"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 22)
layout_mode = 2
text = "Start new run"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 22)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit"
